--- a/src/Navigation/Logo/Logo.module.css
+++ b/src/Navigation/Logo/Logo.module.css
@@ -6,3 +6,11 @@
     box-sizing: border-box;
     border-radius: 5px;
 }
+
+.Logo span {
+    height: 100%;
+    vertical-align: middle;
+    color: rgba(255, 0, 0);
+    font-weight: 200;
+    letter-spacing: .1em;
+}
