--- a/src/components/Auth/Signup/Signup.module.css
+++ b/src/components/Auth/Signup/Signup.module.css
@@ -1,3 +1,6 @@
+.Signup {
+    margin: 40px 30px 10px 30px;
+} 
 .Buttons {
     text-align: center;
     margin-top: 20px;
@@ -7,4 +10,10 @@
 .Buttons button {
     display: inline;
     margin-right: 20px;
+}
+
+@media ( min-width: 500px) {
+    /* .Signup {
+        margin: 0 0 0 0;
+    }  */
 }
