--- a/src/components/pages/Workouts/View/View.module.css
+++ b/src/components/pages/Workouts/View/View.module.css
@@ -1,12 +1,7 @@
 .View {
-    margin: 50px 50px 34px 45px;
-}
-.Title {
-    display: block;
+    padding-top: 72px;
 }
 
-.Title span{ 
-    display: block;
-    margin-top: 30px;
-    text-align: justify;
+.CreateBtn {
+    color: rgba(0, 128, 0);
 }
