--- a/src/components/pages/Workouts/Create/Create.module.css
+++ b/src/components/pages/Workouts/Create/Create.module.css
@@ -1,3 +1,14 @@
 .Create {
     padding-top: 72px;;
 }
+
+.Buttons {
+    text-align: center;
+    margin-top: 20px;
+    box-sizing: border-box;
+}
+
+.Buttons button {
+    display: inline;
+    margin-right: 20px;
+}
